# reinforcement

./: README.md  pyproject.toml  taskfile.yml
.reference/: train_impala.py
checkpoints/impala_cartpole/20251018_221334/: algorithm_state.pkl  class_and_ctor_args.pkl  training_metadata.json
checkpoints/impala_cartpole/20251018_221334/env_runner/: class_and_ctor_args.pkl
checkpoints/impala_cartpole/20251018_221334/env_runner/env_to_module_connector/: class_and_ctor_args.pkl
checkpoints/impala_cartpole/20251018_221334/env_runner/module_to_env_connector/: class_and_ctor_args.pkl
checkpoints/impala_cartpole/20251018_221334/learner_group/: class_and_ctor_args.pkl
checkpoints/impala_cartpole/20251018_221334/learner_group/learner/: class_and_ctor_args.pkl  state.pkl
checkpoints/impala_cartpole/20251018_221334/learner_group/learner/rl_module/: class_and_ctor_args.pkl
checkpoints/impala_cartpole/20251018_221334/learner_group/learner/rl_module/default_policy/: class_and_ctor_args.pkl  module_state.pkl
configs/: base.py  paths.py
notebooks/: 00-rl_guide.ipynb  01-rl.ipynb
scripts/: __init__.py  train.py
